package com.example.pressdistribution.model;

public enum UserRole {
    ADMINISTRATOR,
    PARISH_PRIEST
}
